manifests/podinfo/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podinfo
  namespace: tracing-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: podinfo
  template:
    metadata:
      labels:
        app: podinfo
    spec:
      containers:
        - name: podinfo
          image: ghcr.io/stefanprodan/podinfo:6.11.2
          command:
            - ./podinfo
            - --port=9898
            - --level=info
            - --otel-service-name=podinfo
          ports:
            - name: http
              containerPort: 9898
              protocol: TCP
