manifests/podinfo/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: podinfo
  namespace: tracing-demo
spec:
  type: ClusterIP
  selector:
    app: podinfo
  ports:
    - name: http
      port: 9898
      targetPort: http
