manifests/podinfo/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: podinfo
  namespace: tracing-demo
spec:
  hostnames:
  - "tracing-demo-127-0-0-1.nip.io"
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: airlock-gateway
    namespace: airlock-gateway
    sectionName: http
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: podinfo
      namespace: tracing-demo
      port: 9898
